# causal-wave-landings-repro

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  RELEASE_v1_0_0.md  pyproject.toml
data/: SHA256SUMS  benchmark_targets_particle.json  carrier_operator_linear_stability.json  causal_wave_coefficients.json  coefficient_perturbation_null.json  coefficient_readout_blindness.json  coefficient_readout_richardson.json  counter_hypothesis_evidence.json  landings_expected.json  landings_under_reduction.json  lattice_seed_canonical.json  projector_support_variation.json  projector_supports.json  selection_correction.json  shell_coefficients.json  yukawa_cluster_fisher.json
outputs/: R_stability_audit.json  admissible_formulas_depth4.json  alphabet_shuffled_null.json  coefficient_reduction.json  counter_hypotheses_summary.json  expected_output.txt  ir_hyperbolicity_certificate.json  reduction_null_v2.json  reduction_system.json  sensitivity_exact_tier.json  system_R_audit_summary.json  verify_C2_matter_regime_alternatives.json  verify_D_Omega_2adic_chirality_phase.json  verify_D_Omega_discrete_laplacian_spectrum.json  verify_D_Omega_full_harmonic_closure.json  verify_D_Omega_lattice_resonance.json  verify_chirality_matter_boundary.json  verify_fast_slow_D_Omega_predictions.json  verify_projector_basis_exhaustion.json  verify_system_R_three_nulls.json  verify_system_R_variables_origin.json
paper/: abstract_short.tex  manuscript.aux  manuscript.out  manuscript.tex  manuscript.toc
src/: alphabet_shuffled_null.py  audit_R_alternatives.py  audit_R_stability.py  (+37 more)
(+12 files in other folders)
